feat: role based access endpointa